--- a/content/waves-1d.ipynb
+++ b/content/waves-1d.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "### Standing and traveling waves in 1D\n",
     "\n",
-    "We beging by plotting a simple periodic function\n",
+    "We beging by plotting a simple periodic function using numpy (np) and matplotlib.pyplot (plt) \n",
     "$$y = sin(kx)=sin\\Big(2\\pi \\cdot \\frac{x}{\\lambda}\\Big)$$"
    ]
   },
@@ -42,7 +42,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x113ac6550>]"
+       "[<matplotlib.lines.Line2D at 0x118755630>]"
       ]
      },
      "execution_count": 3,
@@ -74,15 +74,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "**Using python function to make wavelength exploration simple**"
+    "**By putting above example inside a python function will make wavelength exploration much easier.**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "def wave(L):\n",
@@ -96,8 +104,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -113,7 +125,7 @@
     }
    ],
    "source": [
-    "# comparing three different wavelength\n",
+    "# Now try comparing three different wavelengths\n",
     "wave(0.5)\n",
     "wave(1.0)\n",
     "wave(2.0)"
@@ -121,25 +133,40 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### How to add an interactive widget to the plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adding an interactive widget to the plots"
+    "By adding **@widgets.interact(parameters=(init,final))** to our functions we can interactively vary various parameters of the function using dash knobs. Below we illustrate this on the example of our newly created function **wavef(L)** where we vary the length of guitra string L as a parameter between values of 0.1 and 2. Try changing these numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "375e1a3ef68948fcb973a2d95a366250",
+       "model_id": "62c6d1a47ad847d49fd56b30b65612bb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=1.05, description='L', max=2.0, min=0.1), Output()), _dom_classes=('wi…"
+       "interactive(children=(FloatSlider(value=0.55, description='L', max=1.0, min=0.1), Output()), _dom_classes=('wi…"
       ]
      },
      "metadata": {},
@@ -147,38 +174,46 @@
     }
    ],
    "source": [
-    "@widgets.interact(L=(0.1,2))\n",
+    "@widgets.interact(L=(0.1,1))\n",
     "\n",
-    "def wavef(L):\n",
+    "def wavef(L):        # By writing wavef(L=0.1) inside function you can specify initial value \n",
     "    \n",
     "    x = np.linspace(0, +1., 1000)\n",
     "    \n",
-    "    y = np.sin(2*np.pi * x/L)\n",
+    "    y = np.sin(np.pi * x/L)\n",
     "    \n",
     "    plt.plot(x, y)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "### Traveling waves and wave interference "
+    "## Traveling waves and wave interference "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68016594a3d1471781dc455a655c0698",
+       "model_id": "ce66760ec62f43d8a5227246fc7ad01b",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=2, description='k', max=20, min=2), FloatSlider(value=0.0, description='…"
+       "interactive(children=(IntSlider(value=10, description='k', max=20, min=2), FloatSlider(value=0.0, description=…"
       ]
      },
      "metadata": {},
@@ -188,46 +223,51 @@
    "source": [
     "@widgets.interact(k=(2,20),t=(0,50.0,0.1))\n",
     "\n",
-    "def wavef2(k=2,t=0):\n",
+    "def wavef2(k=10,t=0):\n",
     "\n",
     "    v=1         #velocity of waves\n",
-    "    \n",
-    "    phi = 4*np.pi/4\n",
+    "\n",
+    "    phi = 0.5   # vary initial phase between -2*np.pi and 2*np.pi\n",
     "    \n",
     "    x = np.linspace(0, 1., 1000)\n",
     "    \n",
     "    wave1 = np.sin(k*(x-v*t)) \n",
     "    \n",
-    "    wave2= np.sin(k*(x-v*t)+phi)    # try flipping the direction ofvelocity to get standing wave\n",
-    "    \n",
+    "    wave2= np.sin(k*(x-v*t)+phi)    #try flipping the direction ofvelocity to get standing wave\n",
     "    \n",
     "    plt.plot(x, wave1,'--', color='blue')\n",
     "    plt.plot(x,wave2,'--',  color='green')\n",
     "    plt.plot(x, wave1+wave2,color='red')\n",
     "    \n",
-    "    plt.ylim([-2,2])\n",
-    "    \n",
+    "    plt.ylim([-2.5,2.5])\n",
     "    plt.legend(['Wave1','Wave2','Wave1+Wave2'])\n",
-    "    \n",
     "    plt.grid('on')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Normal modes of 1D guitar string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50d1d4f417154ace808e184644e2b2a4",
+       "model_id": "c2f36b01f4b64862a49525ab2e3977ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -257,21 +297,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## 1D guitar string solution as linear combination of normal modes"
+    "## 1D guitar vibrations as linear combination of normal modes"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "source": [
     "For simplicity we will combine two modes with two different mode numbers and shifted with resepct to each ophter by a phase $\\phi$.  "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "$$Mode_1 = cos(\\omega t) \\cdot sin(n_1\\pi  \\cdot \\frac{x}{L})$$\n",
     "\n",
@@ -280,13 +332,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "281b2ce90ac3426f952abea0066a840b",
+       "model_id": "a68aa04e5f1c4ac0a4f4603a020312b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -321,20 +377,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Normal modes of 2d membrane"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92263b5c466848239bc290f7d58595f4",
+       "model_id": "b9bb37a3b2de42fd84fb700db5f5d52f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -372,23 +436,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Vibrations of square 2D membrane as a linear combination of normal modes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 39,
    "metadata": {
     "inputHidden": false,
-    "outputHidden": false
+    "outputHidden": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f08b4df030346098a245c695edbe4e2",
+       "model_id": "957a8192230a467bab3f9b80d60017a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -401,32 +472,30 @@
     }
    ],
    "source": [
-    "%matplotlib inline\n",
-    "\n",
-    "@widgets.interact(n1=(1,10),m1=(1,10),n2=(1,10),m2=(1,10),phi=(0,2*np.pi),t=(0,20))\n",
+    "@widgets.interact(n1=(1,10),m1=(1,10),n2=(1,10),m2=(1,10),phi=(0,2*np.pi),t=(0,100))\n",
     "\n",
     "def membrane(n1=1, m1=1, n2=1, m2=1, phi=0, t=0): \n",
     "    \n",
-    "    t=0\n",
     "    omega=1\n",
     "    \n",
-    "    Lx,Ly = 1,1                       # size of memrbante\n",
-    "    N=40                              # number of grid points along X and Y\n",
+    "    L=1                       # size of memrbante\n",
+    "    N=40                      # number of grid points along X and Y\n",
     "    \n",
-    "    xs = np.linspace(0,Lx,N)\n",
-    "    ys = np.linspace(0,Ly,N)\n",
-    "    X,Y = np.meshgrid(xs,ys)          # create 2D mesh of points along X and Y\n",
+    "    x = np.linspace(0,L,N)\n",
+    "    y = np.linspace(0,L,N)\n",
+    "    X,Y = np.meshgrid(x,y)   # create 2D mesh of points along X and Y\n",
     "     \n",
     "\n",
-    "    mode1 = np.cos(omega*t) * np.sin(n1*np.pi*X/Lx) * np.sin(m1*np.pi*Y/Ly) \n",
+    "    mode1 = np.cos(omega*t) * np.sin(n1*np.pi*X/L) * np.sin(m1*np.pi*Y/L) \n",
     "     \n",
-    "    mode2 = np.cos(omega*t+phi) * np.sin(n2*np.pi*X/Lx) * np.sin(m2*np.pi*Y/Ly) \n",
+    "    mode2 = np.cos(omega*t+phi) * np.sin(n2*np.pi*X/L) * np.sin(m2*np.pi*Y/L) \n",
     "   \n",
-    "    #plt.pcolor(X,Y,mode1+mode2,cmap='jet')\n",
+    "\n",
     "        \n",
-    "    fig = plt.figure()            \n",
-    "    ax  = plt.axes(projection='3d')   # Making a 3D plot     \n",
+    "    fig, ax = plt.figure(figsize=(9,6))            \n",
+    "    ax      = plt.axes(projection='3d')   # Making a 3D plot     \n",
     "   \n",
+    "    ax.set_zlim([-2.0,2.0])\n",
     "    ax.plot_surface(X,Y,mode1+mode2,cmap='RdYlBu') #Do the Plot "
    ]
   },
