--- a/content/SphHarm_visualize.ipynb
+++ b/content/SphHarm_visualize.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "## Visualizing the solutions of harmonic oscillator problem.   "
+    "## Visualizing Spherical harmonics"
    ]
   },
   {
