--- a/content/SphHarm_visualize.ipynb
+++ b/content/SphHarm_visualize.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -26,33 +26,80 @@
     "# First load the numpy/scipy/matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from scipy.special import sph_harm\n",
     "\n",
+    "# 3D plotting\n",
     "from matplotlib import cm, colors\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
-    "#load interactive widgets\n",
+    "#Interactive widgets\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
     "\n",
-    "#If your screen has retina display this will increase resolution of plots\n",
+    "#Increase resolution of plots\n",
     "%config InlineBackend.figure_format = 'retina'"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import [spherical harmonics](https://docs.scipy.org/doc/scipy/reference/generated/scipy.special.sph_harm.html#scipy.special.sph_harm) from scipy [special functions collection](https://docs.scipy.org/doc/scipy/reference/special.html)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Import spherical harmonics\n",
+    "from scipy.special import sph_harm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "Y_{lm}(\\phi,\\theta) = \\sqrt{\\frac{2l+1}{4\\pi} \\frac{(l-m)!}{(l+m)!} } P_{lm}(cos \\phi) \\cdot e^{im\\theta}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that scipy adopts slightly different convenient of angles than what is adopted in textbook. \n",
+    "\n",
+    "- **m array_like**\n",
+    "Order of the harmonic (int); must have |m| <= l.\n",
+    "\n",
+    "- **l array_like**\n",
+    "Degree of the harmonic (int); must have l >= 0. \n",
+    "\n",
+    "- **$\\theta$ array_like**\n",
+    "Azimuthal (longitudinal) coordinate; must be in $[0, 2\\pi]$.\n",
+    "\n",
+    "- **$\\phi$ array_like**\n",
+    "Polar (colatitudinal) coordinate; must be in $[0, \\pi]$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
    },
    "outputs": [],
    "source": [
+    "# Create 2D grid of angular variables\n",
+    "\n",
     "phi = np.linspace(0, np.pi, 100)\n",
     "theta = np.linspace(0, 2*np.pi, 100)\n",
     "phi, theta = np.meshgrid(phi, theta)\n",
     "\n",
-    "# The Cartesian coordinates of the unit sphere\n",
+    "# Convert to cartesian coordinates. r=const=1 for convenience\n",
     "x = np.sin(phi) * np.cos(theta)\n",
     "y = np.sin(phi) * np.sin(theta)\n",
     "z = np.cos(phi)"
@@ -60,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -90,7 +137,7 @@
     "m, l = 2, 4\n",
     "Ylm  = sph_harm(m, l, theta, phi).real\n",
     "\n",
-    "# Calculate the spherical harmonic Y(l,m) and normalize to [0,1]\n",
+    "#normalize color to [0,1] corresponding to magnitude of spherical harmonic\n",
     "\n",
     "fcolors = (Ylm - Ylm.min())/(Ylm.max() - Ylm.min())\n",
     "\n",
@@ -98,6 +145,49 @@
     "\n",
     "# Turn off the axis planes\n",
     "ax.set_axis_off()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "220fa4141bbb424db7b70ac1f6fad42c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='l', index=1, options=(0, 1, 2, 3, 4, 5, 6, 7, 8, 9), value=1), Dro…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@widgets.interact(l = np.arange(0,10,1),m=np.arange(-l,l+1,1))\n",
+    "\n",
+    "def plot_SphHarm(l=1,m=0):\n",
+    "\n",
+    "    fig = plt.figure(figsize=(10,10))\n",
+    "    ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "    Ylm  = sph_harm(m, l, theta, phi).real\n",
+    "\n",
+    "    fcolors = (Ylm - Ylm.min())/(Ylm.max() - Ylm.min())\n",
+    "\n",
+    "    ax.plot_surface(x, y, z, facecolors=cm.seismic(fcolors))\n",
+    "\n",
+    "    ax.set_axis_off()\n",
+    "    \n",
+    "\n",
+    "    # Set axes limit to keep aspect ratio 1:1:1\n",
+    "    ax.set_xlim(-1, 1)\n",
+    "    ax.set_ylim(-1, 1)\n",
+    "    ax.set_zlim(-1, 1)"
    ]
   },
   {
