--- a/content/SphHarm_visualize.ipynb
+++ b/content/SphHarm_visualize.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -149,13 +149,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "220fa4141bbb424db7b70ac1f6fad42c",
+       "model_id": "4bb450a98cee4e718559ffeb47f684fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -188,6 +188,59 @@
     "    ax.set_xlim(-1, 1)\n",
     "    ax.set_ylim(-1, 1)\n",
     "    ax.set_zlim(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Making volume plot with ipyvolumes\n",
+    "\n",
+    "\n",
+    "- [IPyvolume](https://ipyvolume.readthedocs.io/en/latest/index.html) is a Python library to visualize 3D volumes. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipyvolume as ipv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "24bdd18a45354812b700d495048f4394",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Figure(camera=PerspectiveCamera(fov=46.0, position=(0.0, 0.0, 2.0), quaternion=(0.0, 0.0, 0.0, …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ipv.figure()\n",
+    "\n",
+    "m, l =  0, 3\n",
+    "\n",
+    "Ylm  = sph_harm(m, l, theta, phi).real  \n",
+    "\n",
+    "fcolors = (Ylm - Ylm.min())/(Ylm.max() - Ylm.min())\n",
+    "\n",
+    "mesh = ipv.plot_surface(x, y, z, color=cm.seismic(fcolors))  # Feeding our x,y,z and colormap defined previously\n",
+    "\n",
+    "ipv.show()"
    ]
   },
   {
