--- a/content/AppendixA_complex_numbers.ipynb
+++ b/content/AppendixA_complex_numbers.ipynb
@@ -19,10 +19,10 @@
     }
    },
    "source": [
-    "**Reccomended:** Watch the  following YouTube video \n",
+    "**Recommended:** Watch the  following YouTube video \n",
     "[\"complex numbers are real, part-1\"](https://www.youtube.com/watch?v=T647CGsuOVU)\n",
     "\n",
-    "**Also Reccomended:** [A Visual, Intuitive Guide to Imaginary Numbers](https://betterexplained.com/articles/a-visual-intuitive-guide-to-imaginary-numbers/)"
+    "**Also recommended:** [A Visual, Intuitive Guide to Imaginary Numbers](https://betterexplained.com/articles/a-visual-intuitive-guide-to-imaginary-numbers/)"
    ]
   },
   {
@@ -39,26 +39,26 @@
     "\n",
     "![](./images/cnum_intro.png)\n",
     "\n",
-    "- **Real part** $ x $ \n",
+    "- **Real part** $ x $ \n.",
     "- **Imaginary part** $ y $.\n",
     "\n",
-    "Complex numbers are every bit as real as  negative numbers. Sure, you do not count objects on your fingers by using complex numbers but complex numbers obey important relationships in math and physics the same way other numbers do. In fact we will see that central equation for quantum mechanics, the Schrodinger equstion, contains an imaginary number. As a result solutions to Schroidnger equation are functions of complex variable. Why? Because apparently thats how nature works. Nature operates on complex plane which includes real numbers as subset. Can we learn to use complex numbers with ease and devcelop intuition and visual sense? Yup! And that will be our objective in this short Appendix. "
+    "Complex numbers are every bit as real as  negative numbers. Sure, you do not count objects on your fingers by using complex numbers but complex numbers obey important relationships in math and physics the same way other numbers do. In fact we will see that the central equation of quantum mechanics, the Schrödinger equation, contains an imaginary number. As a result, solutions of the Schrödinger equation are functions of complex variable. Why? Because, apparently, that's how nature works. Nature operates on a complex plane, which includes real numbers as subset. Can we learn to use complex numbers with ease and develop an intuition and visual sense? Yup! And that will be our objective in this short Appendix. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Intoroducing the i \n",
+    "### Introducing $ i $ \n",
     "\n",
-    "When first confronted with complex numbers they seem iunintuitive and hard to visualize. The imaginary unit i in particular mystifies as to what it is and where did it come from. \n",
+    "When first confronted with complex numbers they seem unintuitive and hard to visualize. The imaginary unit $ i $ in particular mystifies as to what it is and where did it come from. \n",
     "Some facts from mathematics are in order here:\n",
     "\n",
-    "- **What is the definition of i?** The imaginary number i is defined solely by the property that its square is −1 that is: $i\\cdot i=-1$. \n",
+    "- **What is the definition of $ i $?** The imaginary number $ i $ is defined solely by the property that its square is $−1$, that is: $i\\cdot i=-1$. \n",
     "\n",
-    "- **How does i change what i know about math of real variables?** Imaginary numbers are an important mathematical concept, which extend the real number system ℝ to the complex number system ℂ, which in turn provides at least one root for every nonconstant polynomial P(x). (See Fundamental theorem of algebra.) The term \"imaginary\" is used because there is no real number having a negative square.\n",
+    "- **How does $i$ change what I know about math of real variables?** Imaginary numbers are an important mathematical concept, which extend the real number system $\\mathbb{R}$ to the complex number system $\\mathbb{C}$, which in turn provides at least one root for every nonconstant polynomial $P(x)$. (See the Fundamental theorem of algebra.) The term \"imaginary\" is used because there is no real number having a negative square.\n",
     "\n",
-    "- **Where does i appear in math?** Most notably imaginary number (i) provide solutions to quadratic equation $x^2 + 1 = 0.$ Although there is no real number with this property, i can be used to extend the real numbers to what are called complex numbers, using addition and multiplication. Generally there are two complex square roots of every real number e.g square root of -1 is i and -i. \n",
+    "- **Where does $i$ appear in math?** Most notably imaginary number (i) provide solutions to quadratic equation $x^2 + 1 = 0.$ Although there is no real number with this property, i can be used to extend the real numbers to what are called complex numbers, using addition and multiplication. Generally there are two complex square roots of every real number e.g square root of -1 is i and -i. \n",
     "\n",
     "- **What do you call a number that contains i?** A complex number z=1+2i. A function of complex variable is a function if it operates on complex variables z. "
    ]
@@ -71,7 +71,7 @@
     }
    },
    "source": [
-    "### Eculidead vs polar representation of complex numbers\n",
+    "### Eculidean vs polar representation of complex numbers\n",
     "\n",
     "![](./images/cnum_2.png)\n",
     "\n",
@@ -80,7 +80,7 @@
     "$$z = x + iy = r(\\cos{\\phi} + i \\sin{\\phi}) = re^{i\\phi} $$\n",
     "\n",
     "The second equality above is known as [**Euler’s formula**](https://en.wikipedia.org/wiki/Euler%27s_formula#targetText=Euler's%20formula%20states%20that%20for,argument%20x%20given%20in%20radians.&targetText=When%20%2C%20Euler's%20formula%20evaluates%20to,is%20known%20as%20Euler's%20identity.) \n",
-    "An equally widely regarded as one of the most beautiful and mysterious in mathematics."
+    "And equally widely regarded as one of the most beautiful and mysterious in mathematics."
    ]
   },
   {
@@ -93,7 +93,7 @@
    "source": [
     "The complex conjugate $\\bar{z}$ of $z$ is defined as\n",
     "\n",
-    "$$\\bar z = x-iy =  r (\\cos{\\phi} - i \\sin{\\phi} ) = re^{i\\phi}$$\n",
+    "$$\\bar z = x-iy =  r (\\cos{\\phi} - i \\sin{\\phi} ) = re^{-i\\phi}$$\n",
     "\n",
     "The value $r$ is the Euclidean distance of vector $(x,y)$ from the\n",
     "origin and is equal to the modulus of $|z|=\\sqrt{\\bar{z}z}$\n",
@@ -121,7 +121,7 @@
     "$$\n",
     "\\cos{\\phi} = \\frac{x}{r} = \\frac{e^{i\\phi} + e^{-i\\phi}}{2} , \\quad\n",
     "\\sin{\\phi} = \\frac{y}{r} = \\frac{e^{i\\phi} - e^{-i\\phi}}{2i} , \\quad\n",
-    "\\tan{\\phi} = \\frac{x}{y}\n",
+    "\\tan{\\phi} = \\frac{y}{x}\n",
     "$$"
    ]
   },
@@ -135,7 +135,7 @@
    "source": [
     "## De Moivre’s Theorem\n",
     "\n",
-    "[de Moivre’s theorem](https://en.wikipedia.org/wiki/De_Moivre%27s_formula) states that:\n",
+    "[De Moivre’s theorem](https://en.wikipedia.org/wiki/De_Moivre%27s_formula) states that:\n",
     "\n",
     "$$\n",
     "z^n=(r(\\cos{\\theta} + i \\sin{\\theta}))^n =\n",
@@ -144,7 +144,7 @@
     "$$\n",
     "\n",
     "We raised complex number to power n, used polar representation and realized that exponent raised to power n simply multiplies polar angle by n. \n",
-    "Note that e Moivre’s theorem allows relating igonometirc functions of angle $\\theta$ raised to power $n$ to trignomoteric functions of of angle $n\\theta$ of power one:\n",
+    "Note that de Moivre’s theorem allows relating trigonometric functions of angle $\\theta$ raised to power $n$ to trignomoteric functions of of angle $n\\theta$ of power one:\n",
     "\n",
     "$$\n",
     "r^n(\\cos{\\theta} + i \\sin{\\theta})^n = r^n (\\cos{n\\theta} + i \\sin{n\\theta})\n",
@@ -154,7 +154,7 @@
     "(\\cos{\\theta} + i \\sin{\\theta})^n = (\\cos{n\\theta} + i \\sin{n\\theta})\n",
     "$$\n",
     "\n",
-    "The proof of De Moivre's Theorem is done via [induction](https://en.wikipedia.org/wiki/De_Moivre%27s_formula), e.g one can expand the parenthesis ans assert the equality for cases n=2, n=3, .."
+    "The proof of de Moivre's theorem can be done via [induction](https://en.wikipedia.org/wiki/De_Moivre%27s_formula), e.g one can expand the parentheses ans assert the equality for cases n=2, n=3, ..."
    ]
   },
   {
@@ -176,7 +176,7 @@
     }
    },
    "source": [
-    "### Example-1: Pythagoras theorem\n",
+    "### Example-1: Pythagoras' theorem\n",
     "\n",
     "We can use de Moivre’s theorem to show that\n",
     "$ r = \\sqrt{x^2 + y^2} $.\n",
@@ -254,7 +254,7 @@
     "\n",
     "The equations above are also known as the **angle sum identities**. We\n",
     "can verify the equations using the `simplify` function in the\n",
-    "`sympy` package:"
+    "`sympy` package."
    ]
   },
   {
@@ -313,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Manipulating and visualizing complex numbers using python"
+    "## Manipulating and visualizing complex numbers using Python"
    ]
   },
   {
@@ -331,7 +331,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "#If your screen has retina display this will increase resolution of plots\n",
+    "#If your screen has retina display this will increase the resolution of plots\n",
     "%config InlineBackend.figure_format = 'retina'"
    ]
   },
@@ -614,24 +614,24 @@
     "\n",
     "# Compute conjugate, absolute values\n",
     "zc = z.conjugate()\n",
-    "z_abs  = abs(z)\n",
+    "z_abs = abs(z)\n",
     "\n",
     "\n",
     "### Plot\n",
     "\n",
-    "plt.plot(z.real,z.imag, 'o',ms=12,color='blue') \n",
+    "plt.plot(z.real, z.imag, 'o',ms=12, color='blue') \n",
     "\n",
-    "plt.plot(zc.real,zc.imag, 'o',ms=12, color='green') \n",
+    "plt.plot(zc.real, zc.imag, 'o', ms=12, color='green') \n",
     "\n",
-    "plt.plot(z_abs.real,z_abs.imag, 'o',ms=12,color='grey') \n",
+    "plt.plot(z_abs.real, z_abs.imag, 'o', ms=12, color='grey') \n",
     "\n",
     "\n",
     "#Plot grid and specify a legend\n",
     "\n",
     "plt.grid('on')\n",
-    "plt.legend([\"z: \" + str(z)[1:10], \"zc: \" + str(zc)[1:10], \"z_abs: \" + str(z_abs)[:10]],fontsize=12)\n",
-    "plt.xlabel(\"Re(z)\",fontsize=12)\n",
-    "plt.ylabel(\"Im(z)\",fontsize=12)"
+    "plt.legend([\"z: \" + str(z)[1:10], \"zc: \" + str(zc)[1:10], \"z_abs: \" + str(z_abs)[:10]], fontsize=12)\n",
+    "plt.xlabel(\"Re(z)\", fontsize=12)\n",
+    "plt.ylabel(\"Im(z)\", fontsize=12)"
    ]
   },
   {
@@ -643,7 +643,7 @@
    },
    "source": [
     "Let’s use Python to convert the trigonometric form of the complex number\n",
-    "$z$ to polar form and that visualize on a polar plot \n",
+    "$z$ to polar form and that visualize on a polar plot. \n",
     "\n",
     "For  $z = 1 + \\sqrt{3} i $, $ x = 1 $, $ y = \\sqrt{3}$.\n",
     "\n",
@@ -816,8 +816,8 @@
     "\n",
     "#z = 1+np.sqrt(3)*1j\n",
     "\n",
-    "r =  1         # cmath.polar(z)[0]                         \n",
-    "θ =  np.pi/3   # cmath.polar(z)[1] \n",
+    "r = 1         # cmath.polar(z)[0]                         \n",
+    "θ = np.pi/3   # cmath.polar(z)[1] \n",
     "\n",
     "\n",
     "# Plot\n",
@@ -923,7 +923,7 @@
     }
    },
    "source": [
-    "Below we will use symbolic python to derive Euler's relation by expanding sines, conse and exp in taylor series. If you have used Mathematica, WolfraALpha, or another math software that uses symbols than Sympy is essetnially python version of that. The central objects in Sympy are variables which we define and than do symbolic operations such as expand in series, differnetiate, simplify expression, integrate etc. "
+    "Below we will use symbolic python to derive Euler's relation by expanding sines, conse and exp in Taylor series. If you have used Mathematica, WolframAlpha, or another math software that uses symbols, then Sympy is essentially a Python version of that. The central objects in Sympy are variables which we define and then do symbolic operations such as expand in series, differentiate, simplify expression, integrate etc. "
    ]
   },
   {
@@ -949,10 +949,10 @@
    },
    "outputs": [],
    "source": [
-    "x = Symbol('x',real=True)\n",
-    "y = Symbol('y',real=True)\n",
-    "z = Symbol('z',complex=True)\n",
-    "n = Symbol('n',real=True)"
+    "x = Symbol('x', real=True)\n",
+    "y = Symbol('y', real=True)\n",
+    "z = Symbol('z', complex=True)\n",
+    "n = Symbol('n', real=True)"
    ]
   },
   {
@@ -1034,7 +1034,7 @@
     }
    ],
    "source": [
-    "b=I*sin(y).series(y,0,4) \n",
+    "b = I*sin(y).series(y,0,4) \n",
     "b"
    ]
   },
@@ -1102,7 +1102,7 @@
     }
    ],
    "source": [
-    "integrate(cos(n*x)*sin(n*x), (x,-pi,pi))  # evaluate integral of cos(nx)sin(nx)"
+    "integrate(cos(n*x)*sin(n*x), (x, -pi, pi))  # evaluate integral of cos(nx)sin(nx)"
    ]
   },
   {
@@ -1115,7 +1115,7 @@
    "source": [
     "## Complex numbers and Julia sets and fractals.\n",
     "\n",
-    "- **Fractal** is a mathematically defined, self similar object which has similarity and symmetry on a variety of scales. The Julia Set Fractal is a type of fractal defined by the behavior of a function that operates on input complex numbers. More explicitly, upon iterative updating of input complex number, the Julia Set Fractal represents the set of inputs whose resulting outputs either tend towards infinity or remain bounded. <br><br>\n",
+    "- **Fractal** is a mathematically defined, self-similar object which has similarity and symmetry on a variety of scales. The Julia Set Fractal is a type of fractal defined by the behavior of a function that operates on input complex numbers. More explicitly, upon iterative updating of input complex number, the Julia Set Fractal represents the set of inputs whose resulting outputs either tend towards infinity or remain bounded. <br><br>\n",
     "- **Julia set fractals** are normally generated by initializing a complex number  $z = x + yi$  where  $i^2 = -1$  and x and y are image pixel coordinates in the range of about -2 to 2. Then, z is repeatedly updated using:  $z = z^2 + c$  where c is another complex number that gives a specific Julia set. After numerous iterations, if the magnitude of z is less than 2 we say that pixel is in the Julia set and color it accordingly. Performing this calculation for a whole grid of pixels gives a fractal image."
    ]
   },
