--- a/content/python-intro.ipynb
+++ b/content/python-intro.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Material covered in this tutorial:"
+    "## Material covered in this tutorial"
    ]
   },
   {
