--- a/content/python-intro.ipynb
+++ b/content/python-intro.ipynb
@@ -20,7 +20,7 @@
    },
    "source": [
     "The objective of these notes it to provide a quick introduction to Python language. No background in programming or previous knolwedge of Python is assumed. These notes will only cover the bare essentials of Python which will be used throughout the course. <br>\n",
-    "Since our coverage will necessarily be brief, you can find some more pointers to excellent resources for learning Python listed below. Links under 1 are short and very basic. Links under 2 short but somewhat more advanced and Links under 3 are long and comprehensive. "
+    "Since our coverage will necessarily be brief, you can find some more pointers to excellent resources for learning Python listed below. Links under 1 are short and very basic. Links under 2 are short but somewhat more advanced and Links under 3 are long and comprehensive. "
    ]
   },
   {
