--- a/content/python-intro.ipynb
+++ b/content/python-intro.ipynb
@@ -36,14 +36,14 @@
     "   - [Plotting and programming in Python ](http://swcarpentry.github.io/python-novice-gapminder/)\n",
     "\n",
     "\n",
-    "**2. Condensed coverage of scientific applicaitons can be found in the following online notes:**\n",
+    "**2. Condensed coverage of scientific applications can be found in the following online notes:**\n",
     "   - [Python programming for Scientists](http://wwwstaff.ari.uni-heidelberg.de/mitarbeiter/rschmidt/pycourse/index.html)\n",
     "   - [Introduction to Python for Computational Science and Engineering](https://fangohr.github.io/introduction-to-python-for-computational-science-and-engineering/)\n",
     "   - [Scientific Python lectures by Robert Johanssen](https://nbviewer.jupyter.org/github/jrjohansson/scientific-python-lectures/tree/master/)\n",
     "   \n",
     "    \n",
     "\n",
-    "**3. Finally there are the official Python documentaiton and SciPy tutorials. These provide much more in depth and thorough coverage.**\n",
+    "**3. Finally there are the official Python documentation and SciPy tutorials. These provide much more in depth and thorough coverage.**\n",
     "   - [SciPy lectures](http://scipy-lectures.org/index.html)\n",
     "   - [Official python tutorial](https://docs.python.org/3/tutorial/)"
    ]
