--- a/content/python-intro.ipynb
+++ b/content/python-intro.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "**3. Finally there are the official Python documentation and SciPy tutorials. These provide much more in depth and thorough coverage.**\n",
     "   - [SciPy lectures](http://scipy-lectures.org/index.html)\n",
-    "   - [Official python tutorial](https://docs.python.org/3/tutorial/)"
+    "   - [Official Python tutorial](https://docs.python.org/3/tutorial/)"
    ]
   },
   {
