--- a/content/python-intro.ipynb
+++ b/content/python-intro.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python is a fantastic general-purpose programming language on its own, but with the help of a few popular libraries (numpy, scipy, matplotlib) it becomes a powerful environment for scientific computing.\n",
+    "Python is a fantastic general-purpose programming language on its own, but with the help of a few popular libraries (NumPy, SciPy, Matplotlib) it becomes a powerful environment for scientific computing.\n",
     "\n",
     "You may already know some Python and that's great! For the rest of you, this section will serve as a quick crash course both on the Python programming language and on the use of Python for scientific computing. "
    ]
@@ -105,7 +105,7 @@
     }
    },
    "source": [
-    "Basics of python language:\n",
+    "Basics of the Python language:\n",
     "\n",
     "- **Data types: numbers, booleans, strings, lists**\n",
     "- **Functions**\n",
@@ -2951,7 +2951,7 @@
     }
    },
    "source": [
-    "Matplotlib is a standard plotting library of python. We begin by importing it first."
+    "Matplotlib is a standard plotting library of Python. We begin by importing it first."
    ]
   },
   {
