--- a/content/python-cookbook.ipynb
+++ b/content/python-cookbook.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "## A gallery of useful examples\n",
     "\n",
-    "- **Fore greater variety of plotting examples check out [Matploltib Gallery!](https://matplotlib.org/3.1.1/gallery/index.html)**"
+    "- **For greater variety of plotting examples check out the [Matploltib allery!](https://matplotlib.org/stable/gallery/index.html)**"
    ]
   },
   {
@@ -306,7 +306,7 @@
     }
    ],
    "source": [
-    "#Lets come up with a polynomial function with three constant coefificients\n",
+    "#Lets come up with a polynomial function with three constant coefficients\n",
     "coef = np.array([0.1, 2.2, 1.4])\n",
     "\n",
     "x = np.linspace(-5, 5, 100)\n",
@@ -322,7 +322,7 @@
    "source": [
     "### Using interactive widgets to explore parameters of functions\n",
     "\n",
-    "Suppose we would like to explore how variation of parameter $\\lambda $ affects the following funciton of a satanding wave: \n",
+    "Suppose we would like to explore how variation of parameter $\\lambda $ affects the following function of a standing wave: \n",
     "\n",
     "$$f(x) = sin \\Big(\\frac{2\\pi x}{\\lambda}\\Big)$$"
    ]
@@ -331,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Step 1** Make a python-function which creates a plot as a function of parameter(s) of interest. \n",
+    "**Step 1** Make a Pythonfunction which creates a plot as a function of parameter(s) of interest. \n",
     "\n",
     "**Step 2** Add an interactive widget on top to vary the parameter."
    ]
@@ -374,7 +374,7 @@
    "source": [
     "### Simple animations\n",
     "\n",
-    "While widgets are useful sometimes we want to make movies of our numerical explorations. We can do taht by using animate methods from matploltib library. To show animation we also need to change %matplotlib magic to notebook format as done in the cell below."
+    "While widgets are useful sometimes we want to make movies of our numerical explorations. We can do that by using animate methods from matploltib library. To show animation we also need to change %matplotlib magic to notebook format as done in the cell below."
    ]
   },
   {
@@ -386,7 +386,7 @@
     "import matplotlib.animation as animation\n",
     "\n",
     "#We change the matplotlib format from inline to notebook\n",
-    "#Make sure to go back to %matplotlib inline afterwords for making non-animated plots\n",
+    "#Make sure to go back to %matplotlib inline afterwards for making non-animated plots\n",
     "%matplotlib notebook  \n",
     "%matplotlib notebook  "
    ]
