--- a/content/python-cookbook.ipynb
+++ b/content/python-cookbook.ipynb
@@ -45,7 +45,7 @@
    "source": [
     "## A gallery of useful examples\n",
     "\n",
-    "- **For greater variety of plotting examples check out the [Matploltib allery!](https://matplotlib.org/stable/gallery/index.html)**"
+    "- **For greater variety of plotting examples check out the [Matploltib gallery!](https://matplotlib.org/stable/gallery/index.html)**"
    ]
   },
   {
